<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pillReminder.alarm.ReminderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/Imageback"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageSave"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_done_button"
        android:contentDescription="@string/notes"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_done"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/Imageback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/Imageback"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_8sdp"
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent">


             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="@dimen/_4sdp"
                 app:cardElevation="@dimen/_2sdp"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="@dimen/_16sdp">


                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/medicine_name"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
                     <EditText
                         android:id="@+id/pillName"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_35sdp"
                         android:layout_marginStart="@dimen/_12sdp"
                         android:layout_marginTop="@dimen/_15sdp"
                         android:layout_marginEnd="@dimen/_12sdp"
                         android:background="@null"
                         android:hint="@string/enter_medicine_name"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
                         android:includeFontPadding="false"
                         android:inputType="text"
                         android:textColor="@color/black"
                         android:textColorHint="@color/notesTextHint"
                         android:textSize="@dimen/_16ssp"
                         app:layout_constraintTop_toBottomOf="@id/Imageback"/>

                 </LinearLayout>
             </androidx.cardview.widget.CardView>

             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
                 app:cardCornerRadius="@dimen/_4sdp"
                 app:cardElevation="@dimen/_2sdp"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="@dimen/_16sdp">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">

                     <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/medicine_days"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_14ssp" />

                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:id="@+id/every_day"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/every_day" />

                     <LinearLayout
                         android:id="@+id/checkbox_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:weightSum="7">

                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_sunday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Sunday" />

                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_monday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:background="@drawable/background_day_view"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Monday" />


                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_tuesday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:background="@drawable/background_day_view"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Tuesday" />

                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_wednesday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:background="@drawable/background_day_view"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Wednesday" />

                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_thursday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:background="@drawable/background_day_view"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Tuhrsday" />

                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_friday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:background="@drawable/background_day_view"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Friday" />


                         <com.example.llesson1.pillReminder.data.views.DayViewCheckBox
                             android:id="@+id/dv_saturday"
                             android:layout_width="@dimen/_40sdp"
                             android:layout_height="@dimen/_40sdp"
                             android:layout_margin="@dimen/_4sdp"
                             android:layout_weight="1"
                             android:background="@drawable/background_day_view"
                             android:button="@null"
                             android:gravity="center"
                             android:text="@string/Saturday" />
                     </LinearLayout>
                 </LinearLayout>

             </androidx.cardview.widget.CardView>

             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_8sdp"
                 app:cardCornerRadius="@dimen/_4sdp"
                 app:cardElevation="@dimen/_2sdp"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="@dimen/_16sdp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/reminder"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />

                  <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">

                      <TextView
                          android:id="@+id/tv_medicine_time"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:background="@drawable/drawable_underline"
                          android:gravity="center"
                          android:padding="@dimen/_4sdp"
                          android:textSize="@dimen/_17ssp"
                          android:textColor="@color/black"
                          tools:text="00:00" />

                         <EditText
                             android:id="@+id/tv_dose_quantity"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_8sdp"
                             android:layout_weight="1"
                             android:background="@drawable/drawable_underline"
                             android:inputType="text"
                             android:hint="@string/_1_0"
                             android:gravity="center"
                             android:padding="@dimen/_4sdp" />


                         <Spinner
                             android:id="@+id/spinner_dose_units"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_8sdp"
                             android:layout_weight="1"
                             android:entries="@array/medications_shape_array" />
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
</androidx.core.widget.NestedScrollView>