<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ContactList"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_contact_list"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Magnify"/>
    <ImageView
        android:id="@+id/Howto"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_questionmark"
        app:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Pill"/>
    <Button
        android:id="@+id/Emergency"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_150sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#F10505"
        android:text="@string/emergency_button"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/noteButton"
        app:layout_constraintTop_toBottomOf="@+id/Pill"/>


    <Button
        android:id="@+id/Magnify"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:text="@string/magnify"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toTopOf="@+id/noteButton"
        app:layout_constraintEnd_toStartOf="@+id/Pill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#2196F3" />

    <Button
        android:id="@+id/Pill"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/pill_reminder"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintBottom_toTopOf="@+id/Emergency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Magnify"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFEB3B" />

    <Button
        android:id="@+id/noteButton"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:backgroundTint="#009688"
        android:text="@string/notes"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Emergency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Magnify"/>


</androidx.constraintlayout.widget.ConstraintLayout>