<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".magnify2.camera">
    <TextureView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_25sdp"
        android:background="@color/bottomBG"
        app:layout_constraintBottom_toBottomOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageZoomIn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_260sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_zoom_in"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="@+id/bottomlayout"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/imageZoomOut"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_200sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_zoom_in"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="@id/bottomlayout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/readForMe"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:text="@string/read_for_me"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/bottomlayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white" />

    <Switch
        android:id="@+id/flashButton"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_200sdp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:text="@string/turn_on_flash"
        android:enabled="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml">

    </Switch>

    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_200sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_flash"
        app:layout_constraintTop_toBottomOf="@id/flashButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name">

    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>